// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders ./src/descriptions/demo/basic.vue correctly 1`] = `
"<div class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-descriptions-header">
    <div class="xy-descriptions-title">User Info</div>
    <!---->
  </div>
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">UserName</span><span class="xy-descriptions-item-content">Zhou Maomao</span></div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Telephone</span><span class="xy-descriptions-item-content">1810000000</span></div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Live</span><span class="xy-descriptions-item-content">Hangzhou, Zhejiang</span></div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Remark</span><span class="xy-descriptions-item-content">empty</span></div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Address</span><span class="xy-descriptions-item-content"> No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China </span></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`renders ./src/descriptions/demo/border.vue correctly 1`] = `
"<div class="xy-descriptions xy-descriptions-bordered css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-descriptions-header">
    <div class="xy-descriptions-title">User Info</div>
    <!---->
  </div>
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Product</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>Cloud Database</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Billing Mode</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>Prepaid</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Automatic Renewal</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>YES</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Order time</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>2018-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Usage Time</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>2019-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Status</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span><span class="xy-badge xy-badge-status xy-badge-not-a-wrapper css-dev-only-do-not-override-1p3hq3p"><span class="xy-badge-status-dot xy-badge-status-processing"></span><span class="xy-badge-status-text">Running</span></span></span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Negotiated Amount</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$80.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Discount</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$20.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Official Receipts</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$60.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Config Info</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 <br></span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`renders ./src/descriptions/demo/responsive.vue correctly 1`] = `
"<div class="xy-descriptions xy-descriptions-bordered css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-descriptions-header">
    <div class="xy-descriptions-title">Responsive Descriptions</div>
    <!---->
  </div>
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Product</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>Cloud Database</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Billing</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>Prepaid</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Time</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>18:00:00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Amount</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$80.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Discount</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$20.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Official</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$60.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Config Info</span>
            <!---->
          </th>
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`renders ./src/descriptions/demo/size.vue correctly 1`] = `
"<div>
  <div class="xy-radio-group xy-radio-group-outline css-dev-only-do-not-override-1p3hq3p"><label class="xy-radio-wrapper xy-radio-wrapper-checked css-dev-only-do-not-override-1p3hq3p"><span class="xy-radio xy-radio-checked"><input type="radio" class="xy-radio-input" checked="" value="default"><span class="xy-radio-inner"></span></span><span>default</span></label><label class="xy-radio-wrapper css-dev-only-do-not-override-1p3hq3p"><span class="xy-radio"><input type="radio" class="xy-radio-input" value="middle"><span class="xy-radio-inner"></span></span><span>middle</span></label><label class="xy-radio-wrapper css-dev-only-do-not-override-1p3hq3p"><span class="xy-radio"><input type="radio" class="xy-radio-input" value="small"><span class="xy-radio-inner"></span></span><span>small</span></label></div><br><br>
  <div class="xy-descriptions xy-descriptions-bordered css-dev-only-do-not-override-1p3hq3p">
    <div class="xy-descriptions-header">
      <div class="xy-descriptions-title">Custom Size</div>
      <div class="xy-descriptions-extra"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Edit</span></button></div>
    </div>
    <div class="xy-descriptions-view">
      <table>
        <tbody>
          <tr class="xy-descriptions-row">
            <th class="xy-descriptions-item-label" colspan="1"><span>Product</span>
              <!---->
            </th>
            <td class="xy-descriptions-item-content" colspan="1">
              <!----><span>Cloud Database</span>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <th class="xy-descriptions-item-label" colspan="1"><span>Billing</span>
              <!---->
            </th>
            <td class="xy-descriptions-item-content" colspan="1">
              <!----><span>Prepaid</span>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <th class="xy-descriptions-item-label" colspan="1"><span>Time</span>
              <!---->
            </th>
            <td class="xy-descriptions-item-content" colspan="1">
              <!----><span>18:00:00</span>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <th class="xy-descriptions-item-label" colspan="1"><span>Amount</span>
              <!---->
            </th>
            <td class="xy-descriptions-item-content" colspan="1">
              <!----><span>$80.00</span>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <th class="xy-descriptions-item-label" colspan="1"><span>Discount</span>
              <!---->
            </th>
            <td class="xy-descriptions-item-content" colspan="1">
              <!----><span>$20.00</span>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <th class="xy-descriptions-item-label" colspan="1"><span>Official</span>
              <!---->
            </th>
            <td class="xy-descriptions-item-content" colspan="1">
              <!----><span>$60.00</span>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <th class="xy-descriptions-item-label" colspan="1"><span>Config Info</span>
              <!---->
            </th>
            <td class="xy-descriptions-item-content" colspan="1">
              <!----><span> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 <br></span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div><br><br>
  <div class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
    <div class="xy-descriptions-header">
      <div class="xy-descriptions-title">Custom Size</div>
      <div class="xy-descriptions-extra"><button class="css-dev-only-do-not-override-1p3hq3p xy-btn xy-btn-primary" type="button"><span style="display: contents;"><!----></span><span>Edit</span></button></div>
    </div>
    <div class="xy-descriptions-view">
      <table>
        <tbody>
          <tr class="xy-descriptions-row">
            <td class="xy-descriptions-item" colspan="1">
              <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Product</span><span class="xy-descriptions-item-content">Cloud Database</span></div>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <td class="xy-descriptions-item" colspan="1">
              <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Billing</span><span class="xy-descriptions-item-content">Prepaid</span></div>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <td class="xy-descriptions-item" colspan="1">
              <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Time</span><span class="xy-descriptions-item-content">18:00:00</span></div>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <td class="xy-descriptions-item" colspan="1">
              <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Amount</span><span class="xy-descriptions-item-content">$80.00</span></div>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <td class="xy-descriptions-item" colspan="1">
              <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Discount</span><span class="xy-descriptions-item-content">$20.00</span></div>
            </td>
          </tr>
          <tr class="xy-descriptions-row">
            <td class="xy-descriptions-item" colspan="1">
              <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Official</span><span class="xy-descriptions-item-content">$60.00</span></div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>"
`;

exports[`renders ./src/descriptions/demo/vertical.vue correctly 1`] = `
"<div class="xy-descriptions css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-descriptions-header">
    <div class="xy-descriptions-title">User Info</div>
    <!---->
  </div>
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">UserName</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">Zhou Maomao</span>
            </div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Telephone</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">1810000000</span>
            </div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Live</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">Hangzhou, Zhejiang</span>
            </div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Address</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content"> No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China </span>
            </div>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container"><span class="xy-descriptions-item-label">Remark</span>
              <!---->
            </div>
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item" colspan="1">
            <div class="xy-descriptions-item-container">
              <!----><span class="xy-descriptions-item-content">empty</span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;

exports[`renders ./src/descriptions/demo/vertical-border.vue correctly 1`] = `
"<div class="xy-descriptions xy-descriptions-bordered css-dev-only-do-not-override-1p3hq3p">
  <div class="xy-descriptions-header">
    <div class="xy-descriptions-title">User Info</div>
    <!---->
  </div>
  <div class="xy-descriptions-view">
    <table>
      <tbody>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Product</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>Cloud Database</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Billing Mode</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>Prepaid</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Automatic Renewal</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>YES</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Order time</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>2018-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Usage Time</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>2019-04-24 18:00:00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Status</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span><span class="xy-badge xy-badge-status xy-badge-not-a-wrapper css-dev-only-do-not-override-1p3hq3p"><span class="xy-badge-status-dot xy-badge-status-processing"></span><span class="xy-badge-status-text">Running</span></span></span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Negotiated Amount</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$80.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Discount</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$20.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Official Receipts</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span>$60.00</span>
          </td>
        </tr>
        <tr class="xy-descriptions-row">
          <th class="xy-descriptions-item-label" colspan="1"><span>Config Info</span>
            <!---->
          </th>
        </tr>
        <tr class="xy-descriptions-row">
          <td class="xy-descriptions-item-content" colspan="1">
            <!----><span> Data disk type: MongoDB <br> Database version: 3.4 <br> Package: dds.mongo.mid <br> Storage space: 10 GB <br> Replication factor: 3 <br> Region: East China 1 <br></span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>"
`;
